--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,135 @@
   font-weight: 400;
   font-style: normal;
 }
+/* shere style */
+.display-flex{
+    display: flex;
+}
+.text-primary{
+    color: #FF900E;
+}
+
+/* dark 02 */
+.text-gray{
+    color:#424242;
+
+}
+
+/* dark03 */
+.text-light-gray{
+    color: #727272;
+}
+
+.bg-light{
+    background-color: rgba(255, 134, 14, 0.1);
+}
+
+.btn-primary{
+    background-color: #FF900E;
+    color: white;
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    font-weight: 600;
+    border-radius: 8px;
+    border: none;
+}
+
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main > section{
+    margin-top: 130px;
+}
+
+/* heade style */
+
+
+/* navbar related style */
+.navbar{
+    justify-content: space-between;
+    align-items: center;
+}
+
+.brand{
+    font-size: 3rem;
+    font-weight: 700;
+}
+
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+}
+
+.nav-link{
+    text-decoration: none;
+    font-weight: 500;
+
+}
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+/* banner releted style */
+.banner-content{
+    max-width: 845px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.banner-titel{
+    font-weight: 700;
+    font-size: 4rem;
+}
+.banner-description{
+    font-size: 1rem;
+}
+.banner-image{
+    width: 100%;
+}
+/* team and feature related style */
+.teams{
+    align-items: center;
+}
+.team-img-conteiner{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+.feature-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+#quick_list{
+    font-weight: 500;
+}
+
+/* responsib media query */
+@media screen and (max-width: 576px) {
+    .navbar, 
+    .nav-links, 
+    .teams{
+        flex-direction: column;
+    }    
+    .team-img-conteiner{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .our-features{
+        margin-left: 20px;
+    }
+}
+/* medium size device */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .teams{
+        flex-direction: column;
+    }    
+    .our-features{
+        margin-left: 50px;
+    }
+}
