--- a/styles/style.css
+++ b/styles/style.css
@@ -118,7 +118,7 @@ main > section{
 }
 /* feature section title style */
 
-.feature{
+.features{
     gap: 140px;
 }
 
@@ -138,6 +138,22 @@ main > section{
     margin-top: 0px;
     margin-bottom: 0px;
     
+}
+
+.featured-architech img{
+    width: 100%;
+}
+
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-top: -100px;
+    margin-left: -100px;
+}
+#experience-years{
+    font-weight: 700;
+    font-size: 4rem;
 }
 
 
@@ -189,6 +205,7 @@ main > section{
 @media screen and (max-width: 576px) {
     .navbar, 
     .nav-links, 
+    .feature,
     .teams{
         flex-direction: column;
     }    
@@ -205,10 +222,14 @@ main > section{
     .our-features{
         margin-left: 20px;
     }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
 }
 /* medium size device */
 @media screen and (min-width: 576px) and (max-width: 992px) {
-    .teams{
+    .teams, .features{
         flex-direction: column;
     }    
     .our-features{
@@ -218,5 +239,9 @@ main > section{
         grid-template-columns: repeat(3, 1fr);
         gap: 50px;
         justify-items: center;
+    }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
     }
 }
